// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`highlight component 1`] = `
<div
  className="Danger"
  style={undefined}
>
  Content
</div>
`;

exports[`highlight component 2`] = `
<div
  className="Warning"
  style={undefined}
>
  Content
</div>
`;

exports[`highlight component 3`] = `
<div
  className="Info"
  style={undefined}
>
  Content
</div>
`;

exports[`highlight component 4`] = `
<div
  className="Success"
  style={undefined}
>
  Content
</div>
`;
